# UAV-Routing

./: .gitignore  LICENSE  README.md  c_formulas.md  check_graph_structure.py  graph.html  graph.py  main.ipynb  main.py  notes.md  pyproject.toml  requirements.txt  tally.py
UAV-Routing/: __init__.py  coefficients.ipynb  data.py  iterator.py  main.ipynb  optimizer.py  proposal.py  socp.py  state.py
datasets/data/: 50_c101.txt
datasets/homberger_200/: c1_2_1.txt  r1_2_1.txt  rc1_2_1.txt
exact/: coefficients.ipynb  exact.py  socp_test.py
experiments/: calibration.ipynb  data.ipynb  energy.ipynb  exact.ipynb  initial_tour_results.csv  local.ipynb  run_ils_section2.py
tests/: confest.py
uav_routing/: __init__.py  accept.py  coefficients.ipynb  data.py  iterator.py  main.ipynb  optimization.py  proposal.py  socp.py  state.py
uav_routing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
uav_routing/environment/: __init__.py  calibration.py  data.py  data_analysis.py  drone.py  environment.py  environment_real.py  environment_test.py  graph.py  plot.py
uav_routing/local_search/: __init__.py  accept.py  initial_solution.py  initial_tour.py  iterator.py  optimization.py  proposal.py  state.py
uav_routing/notebooks/: calibrated_env.pkl  coefficients.ipynb  data.ipynb  energy-formulas.md  energy.ipynb  initial.ipynb  main.ipynb  optimum.ipynb  results_k3_detailed.csv  search.ipynb  test.ipynb
uav_routing/solver/: __init__.py  analysis.py  exact.ipynb  exact.py  graph_data.json  my_model_0.lp  prune.py  socp.py  subgraph.json  uav_infeasible.ilp
